--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
+    "swiper": "^11.0.4",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
