--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@okwallet/extension": "^1.0.17",
     "@starknet-react/core": "^0.17.6",
     "antd": "^5.5.0",
-    "apexcharts": "^3.40.0",
+    "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -28,7 +28,9 @@
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.4",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "react-chartjs-2": "^5.0.0",
+    "faker": "5.5.3"
   },
   "devDependencies": {
     "@types/node": "^20.3.0",
@@ -47,6 +49,7 @@
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "@types/faker": "5.5.9"
   }
 }
