--- a/package.json
+++ b/package.json
@@ -16,23 +16,25 @@
     "antd": "^5.5.0",
     "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
+    "faker": "5.5.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.2",
+    "recharts": "^2.10.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.4",
-    "tailwind-merge": "^1.14.0",
-    "react-chartjs-2": "^5.0.0",
-    "faker": "5.5.3"
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
+    "@types/faker": "5.5.9",
     "@types/node": "^20.3.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -49,7 +51,6 @@
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "@types/faker": "5.5.9"
+    "vite": "^4.3.2"
   }
 }
